@@ -1,3 +1,7 @@
+1 October 2020
+/ in unquoted (x/html) attribute does not indicate empty tag. /> does.
+e.g. <a href=http://www.aaa.bb/cde/index.html>
+
 30 September 2020
 toML: if xml declaration encountered, make sure that there is exactly one "?"
 before the ">" of the xml declaration and before all ">" in all Processing
